# qwenfy

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETED.md  LICENSE  PROGRESS.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py
.agent_tasks/: task_board.md
benchmark/test_cases/: daily.py  professional.py  technical.py
docs/: OPTIMIZATION_PLAN.md  PROVIDERS.md
examples/: __init__.py  end_to_end_demo.py  phase2_demo.py  simple_demo.py
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/icons/: README.md
tests/: __init__.py  test_cache.py  test_engine_base.py  test_integration.py  test_quality.py
yuxtrans/: __init__.py
yuxtrans/cache/: __init__.py  database.py  warmup.py
yuxtrans/desktop/: __init__.py  app.py  hotkey.py  selection.py  settings.py  tray.py  window.py
yuxtrans/engine/: __init__.py  base.py  cloud.py  local.py  router.py
yuxtrans/metrics/: __init__.py  benchmark.py  quality.py
yuxtrans/utils/: __init__.py  concurrency.py  config.py  memory.py  retry.py  setup_wizard.py  startup.py  style.py  terminology.py  text_processing.py
